@@ -1,1 +1,3 @@
-EBUILD asterisk-chan_datacard-9999.ebuild 535 RMD160 0d8c15e61ed184bba19dc4c603b8fee14bfb185c SHA1 7c525d467d26d1b711de1e64ed303563a00e746a SHA256 c5a52c40eda41f937ba14df1f61e14d768ceb94c97ecad43bd6a199827e36fc0
+EBUILD asterisk-chan_datacard-9999.ebuild 627 RMD160 dd5a7eb2e364d2389e6d6ee06e78177b29843831 SHA1 3515a1017544a34fedef84d71e0c98082d5fffa7 SHA256 fa0f9be6d1341fcdfcd8871e626630bd72bf8217321fc4a7638b332f942f51b5
+MISC ChangeLog 369 RMD160 da815b3b72480e63a8b7aba7313ecbc272df407a SHA1 d0e1203f05eb074e838020e4a7e35c8b122da0b4 SHA256 0f5adc21b8ae8615555f6e4d2bf1aae4cd7eddb61a9895ae3cd78b9f60bf8f41
+MISC metadata.xml 412 RMD160 35e457956d0992ee4e5543fb4898f4cf3746031c SHA1 93c8f819f26cce769d0c0e7c14c81acf714f209d SHA256 f7dc4679e374e65d0b3b7d5b9ed690eafb85d4423acce7551d0a7e3a446f4d51
