@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jul 2010; mva <mva@mva.name> asterisk-chan_datacard-9999.ebuild:
+  fixed keywords and, config and documentation
+
   07 Jul 2010; mva <mva@mva.name> +asterisk-chan_datacard-9999.ebuild,
   +metadata.xml:
   added yummi asterisk module
